--- a/WebDevelopment.css
+++ b/WebDevelopment.css
@@ -1,3 +1,39 @@
+#Title{
+    width:100%;
+    background-color: darkgray;
+}
+
+.grid{
+    display: grid;
+    padding: 0px;
+    grid-template-columns: auto auto auto auto;
+    border: 2px solid black;
+}
+
+.gridheader
+{
+    font-size: 20px;
+    font-weight: bold;
+    border-bottom: 2px solid black;
+    text-align: center;
+}
+
+.gridcontent
+{
+    font-size: 20px;
+    text-align: center;
+}
+
+.gridheader + .gridheader 
+{
+    border-left: 2px solid black;
+}
+
+.gridcontent + .gridcontent 
+{
+    border-left: 2px solid black;
+}
+
 body{
     width: 70%;
     margin-left: 15%;
@@ -16,28 +52,32 @@ h4{
     text-align: center
 }
 
-table{
-    border: 2px solid black;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-    border-collapse: collapse;
+header{
+    background-color: beige;
 }
 
-th, td{
-    text-align: center;
+
+table{
+    width: 100%;
+    column-fill: inherit;
+    border: 2px solid black;
+    border-collapse: collapse;
+    table-layout: fixed;
 }
 
 th{
+    font-size: 20px;
+    font-weight: bold;
     border: 2px solid black;
-    background-color: lightgray;
+    text-align: center;
 }
 
-table td + td{
+td{
+    font-size: 20px;
+    text-align: center;
+}
+
+table td + td {
     border-left: 2px solid black;
 }
 
-#Header{
-    width:100%;
-    background-color: darkgray;
-}
