--- a/WebDevelopment.css
+++ b/WebDevelopment.css
@@ -3,43 +3,25 @@
     background-color: darkgray;
 }
 
-.grid{
-    display: grid;
-    padding: 0px;
-    grid-template-columns: auto auto auto auto;
-    border: 2px solid black;
+.homepage:after{
+    content: "";
+    display: table;
+    clear: both;
 }
 
-.gridheader
-{
-    font-size: 20px;
-    font-weight: bold;
-    border-bottom: 2px solid black;
-    text-align: center;
+.homepageleft{
+    float: left;
+    width: 30%
 }
 
-.gridcontent
-{
-    font-size: 20px;
-    text-align: center;
-}
-
-.gridheader + .gridheader 
-{
-    border-left: 2px solid black;
-}
-
-.gridcontent + .gridcontent 
-{
-    border-left: 2px solid black;
+.homepageright{
+    float: left;
+    width: 70%
 }
 
 body{
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin: 0;
 }
-
 h1{
     text-align: center
 }
@@ -53,7 +35,43 @@ h4{
 }
 
 header{
-    background-color: beige;
+    background-color: lightslategray;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    text-align:center;
+}
+
+header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: lightslategray;
+}
+  
+header ul li {
+float: left;
+}
+
+header ul li a {
+display: block;
+color: black;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+}
+
+header ul li a:hover {
+background-color: darkslategray;
+}
+
+footer{
+    background-color: lightslategray;
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
+    text-align: center;
 }
 
 
